welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: ')' expected but ';' found.
if(estSurMessage();""==R)
                  ^BDRBuggle:2: error: ';' expected but ')' found.
if(estSurMessage();""==R)
                        ^BDRBuggle:4: error: ';' expected but ')' found.
if(estSurMessage();""==L)
                        ^BDRBuggle:6: error: ';' expected but ')' found.
if(estSurMessage();""==I)
                        ^BDRBuggle:8: error: ';' expected but ')' found.
if(estSurMesage();""==A)
                       ^BDRBuggle:10: error: ';' expected but ')' found.
if(estSurMessage();""==B)
                        ^BDRBuggle:12: error: ';' expected but ')' found.
if(estSurMessage();""==C)
                        ^BDRBuggle:14: error: ';' expected but ')' found.
if(estSurMessage();""==Z)
                        ^BDRBuggle:16: error: ';' expected but ')' found.
if(estSurMessage();""==Y)
                        ^BDRBuggle:18: error: ';' expected but ')' found.
if(estSurMessage();""==X)
                        ^