welcome.lessons.welcome.bdr.BDR.scala.code
var x: String = ""
if(estSurMessage();""==R)
{Right()}
if(estSurMessage();""==L)
{Left()}
if(estSurMessage();""==I)
{Inverse()}
if(estSurMesage();""==A)
{avance()}
if(estSurMessage();""==B)
{avance();avance()}
if(estSurMessage();""==C)
{avance();avance();avance()}
if(estSurMessage();""==Z)
{recule()}
if(estSurMessage();""==Y)
{recule();recule()}
if(estSurMessage();""==X)
{recule();recule();recule()}
